# medicus

./: .gitignore  CLAUDE.md  LICENSE  README.md  cabal.project  medicus-engine.cabal  stack.yaml
.claude/: settings.local.json
.cursor/specs/medicus-api/: README.md  design.md  future-enhancements.md  requirements.md  tasks.md
.kiro/specs/medicus-engine/: design.md  requirements.md  tasks.md
discussion/: CORE_CLAIM.md  MEDICUS_THEORY_ALGEBRAIC_INTEGRATION.md  MEDICUS_THEORY_EVOLUTION.md  MEDICUS_THEORY_EVOLUTION_DETAILED.md  MEDICUS_THEORY_EVOLUTION_FINAL.md  README.md  STATUS.md
discussion/archive/: RESEARCH_STRATEGY_AND_NCG.md
medicus-api/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  cabal.project  docker-compose.yml  medicus-api.cabal  stack.yaml
medicus-api/app/: Main.hs
medicus-api/bench/: Bench.hs
medicus-api/config/: routes.txt  settings-prod.yml  settings.yml
medicus-api/docs/: 01-setup.md  02-build-system.md  03-graphql-integration.md  04-yesod-graphql.md  05-graphql-playground.md  06-troubleshooting.md  07-build-issues.md  08-api-reference.md  09-graphql-schema.md  README.md  deployment.md  getting-started.md
medicus-api/docs/tutorials/: 01-custom-constraints.md
medicus-api/src/: Application.hs  Foundation.hs  Import.hs  Settings.hs
medicus-api/src/GraphQL/: Resolvers.hs  Schema.hs
medicus-api/src/GraphQL/Mutation/: Optimization.hs  Space.hs
medicus-api/src/GraphQL/Query/: Health.hs  Space.hs
medicus-api/src/GraphQL/Types/: Common.hs  Error.hs  Optimization.hs  Space.hs
medicus-api/src/Handler/: GraphQL.hs  Health.hs  Playground.hs
medicus-api/src/Service/: Optimization.hs  Space.hs  Validation.hs
medicus-api/src/Util/: Conversion.hs  Error.hs
medicus-api/test/GraphQL/: MutationSpec.hs  QuerySpec.hs  SchemaSpec.hs
medicus-api/test/Integration/: E2ESpec.hs
medicus-api/test/Service/: OptimizationSpec.hs  SpaceSpec.hs  ValidationSpec.hs
medicus-api/test/Util/: ConversionSpec.hs  ErrorSpec.hs
report/: DETAILED_MATH_DERIVATIONS.md  SUBMISSION_CANDIDATE_report_v3_math.md  report.md  report_v2_positioning.md  report_v4_extended.md
reports/: IMPLEMENTATION_LOG.md  MEDICUS_CAPABILITIES.md  MEDICUS_ENGINE_COMPLETE.md  README.md  TASKS_11_12_13_COMPLETE.md  TASKS_6_7_8_COMPLETE.md  TASK_10_COMPLETE.md  TASK_10_SUMMARY.md  TASK_11_CHECKPOINT.md  TASK_12_COMPLETE_DETAILED.md  TASK_12_CORRECTED_SUMMARY.md  TASK_1_COMPLETE.md  TASK_1_SUMMARY.md  TASK_2_COMPLETE.md  TASK_3_COMPLETE.md  TASK_6_7-10_COMPLETE.md  TASK_6_7-10_SUMMARY.md  TASK_6_COMPLETE.md  TASK_7_COMPLETE.md  TASK_7_SUMMARY.md  TASK_8_COMPLETE.md  TASK_8_SUMMARY.md  TASK_9_COMPLETE.md  TASK_9_SUMMARY.md
src/MEDICUS/: API.hs  Constraints.hs  EntropyManagement.hs  Mollifier.hs  Norm.hs  PropertyVerification.hs  StatisticalMechanics.hs  UncertaintyPrinciple.hs  Visualization.hs
src/MEDICUS/Optimization/: Newton.hs
src/MEDICUS/Space/: Core.hs  Types.hs
test/: Main.hs  PROPERTY_TESTS.md  README.md
test/Test/MEDICUS/: Constraints.hs  EntropyManagement.hs  Generators.hs  Mollifier.hs  Norm.hs  Optimization.hs  Performance.hs  Properties.hs  PropertyVerification.hs  Space.hs  StatisticalMechanics.hs  UncertaintyPrinciple.hs
verify/: PROOF_SPEC.md  ROADMAP.md  _tasks.md  tasks.md
verify/lean4/: Main.lean  MedicusVerify.lean  README.md  TestAbs.lean  lake-manifest.json  lakefile.toml
verify/lean4/MedicusVerify/: Basic.lean  Layer1Monoid.lean  Layer2Banach.lean  Layer3Mollifier.lean  TestComplete.lean
visualization/: README.md  mollifier.py  noncommutativity.py  pyproject.toml  run_all.py  uncertainty.py
