cabal-version:      3.0
name:               medicus-engine
version:            0.1.0.0
synopsis:           MEDICUS Space Theory Computation Engine
description:        
    MEDICUS (Medical-Enhanced Data Integrity Constraint Unified Space) 
    computation engine implementing functional analysis, statistical mechanics,
    and quantum theory for medical data security optimization.
license:            BSD-3-Clause
license-file:       LICENSE
author:             MEDICUS Research Team
maintainer:         medicus@example.com
category:           Math, Medical, Security
build-type:         Simple
extra-doc-files:    README.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        MEDICUS.Space.Core
        MEDICUS.Space.Types
        MEDICUS.Norm
        MEDICUS.Constraints
        MEDICUS.Optimization.Newton
        MEDICUS.Mollifier
        MEDICUS.StatisticalMechanics
        MEDICUS.UncertaintyPrinciple
        MEDICUS.EntropyManagement
        MEDICUS.PropertyVerification
        MEDICUS.API
        MEDICUS.Visualization
    build-depends:    
        base >= 4.17 && < 5,
        vector >= 0.13 && < 0.14,
        containers >= 0.6 && < 0.8,
        mtl >= 2.3 && < 2.4,
        QuickCheck >= 2.14 && < 2.19,
        deepseq >= 1.4 && < 1.6,
        random >= 1.2 && < 1.3
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings
        TypeApplications
        ScopedTypeVariables
        FlexibleContexts
        FlexibleInstances
        MultiParamTypeClasses
        FunctionalDependencies
        DeriveFunctor
        DeriveGeneric
        GeneralizedNewtypeDeriving

test-suite medicus-engine-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    
        Test.MEDICUS.Space
        Test.MEDICUS.Norm
        Test.MEDICUS.Constraints
        Test.MEDICUS.Properties
        Test.MEDICUS.Generators
    build-depends:
        base >= 4.17 && < 5,
        medicus-engine,
        QuickCheck >= 2.14 && < 2.19,
        tasty >= 1.4 && < 1.6,
        tasty-quickcheck >= 0.10 && < 0.12,
        tasty-hunit >= 0.10 && < 0.11,
        vector >= 0.13 && < 0.14
    default-extensions:
        OverloadedStrings
        TypeApplications
        ScopedTypeVariables
